restructured folders for population evolution project and its tests into something more organized. I found more bugs when I try saving and loading populations of size larger than ~1 billion but all other tests pass. I don't know if it's an issue with my code, h5py, hdf5 or something else

--- a/Plots related to the traveling wave regime-Revisions.ipynb
+++ b/Plots related to the traveling wave regime-Revisions.ipynb
@@ -15,7 +15,7 @@
     "import scipy.optimize as spopt\n",
     "import scipy.stats as spstats\n",
     "\n",
-    "import populationevolution_v5 as popev\n",
+    "import populationevolution as popev\n",
     "\n",
     "np.random.seed(42)\n",
     "plt.style.use(('C:\\\\Users\\\\Nicholas Sherer\\\\.matplotlib\\\\Sherer_Thesis.mplstyle'))\n",
