--- a/Plots related to the drift barrier and mutation rate landscape catastrophe-Revisions.ipynb
+++ b/Plots related to the drift barrier and mutation rate landscape catastrophe-Revisions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits import mplot3d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
     "    for file in glob.glob('drift_barrierK'+str(K)+'replicate?datetime.datetime(2019, 6, *).hdf5'):\n",
     "        try:\n",
     "            pop_reader = popev.PopulationReader(file)\n",
-    "            if len(pop_reader)==10**7: # filter out runs of different long so we can average over runs\n",
+    "            if len(pop_reader)==10**7: # filter out runs of different length so we can average over runs\n",
     "                drift_runs[K].append(pop_reader)\n",
     "        except OSError:\n",
     "            pass"
@@ -55,26 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, 10000000, "
-     ]
-    }
-   ],
-   "source": [
-    "for sset in drift_runs.values():\n",
-    "    for run in sset:\n",
-    "        print(len(run), end=', ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,15 +67,6 @@
    "source": [
     "for K, sset in drift_runs.items():\n",
     "    print(K, len(sset))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drift_runs"
    ]
   },
   {
@@ -284,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x25d4e4e3e80>]"
+       "[<matplotlib.lines.Line2D at 0x29bcb540fd0>]"
       ]
      },
      "execution_count": 11,
@@ -735,6 +698,13 @@
     "ax.set_ylabel('mode of the mutation rate, $\\mu_{mode}$', fontsize=28);\n",
     "plt.savefig('mutation_rate_not_catastrophe.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
