modified notebooks analyzing run data to point to new folder where I've placed all the run data

--- a/Plots related to the drift barrier and mutation rate landscape catastrophe-Revisions.ipynb
+++ b/Plots related to the drift barrier and mutation rate landscape catastrophe-Revisions.ipynb
@@ -35,7 +35,7 @@
     "for K in Ks:\n",
     "    drift_runs[K]=[]\n",
     "for K in Ks:\n",
-    "    for file in glob.glob('drift_barrierK'+str(K)+'replicate?datetime.datetime(2019, 6, *).hdf5'):\n",
+    "    for file in glob.glob('runs/drift_barrierK'+str(K)+'replicate?datetime.datetime(2019, 6, *).hdf5'):\n",
     "        try:\n",
     "            pop_reader = popev.PopulationReader(file)\n",
     "            if len(pop_reader)==10**7: # filter out runs of different length so we can average over runs\n",
