--- a/Plots related to the mutation-rate-sweep approximation-Revisions.ipynb
+++ b/Plots related to the mutation-rate-sweep approximation-Revisions.ipynb
@@ -767,12 +767,12 @@
     "sweeps_p1 = []\n",
     "sweeps_p2 = []\n",
     "\n",
-    "sweeps_p0.append(popev.PopulationReader('sweep_sim2datetime.datetime(2019, 4, 13, 10, 46, 22, 798327).hdf5'))\n",
-    "for file in glob.glob('sweep_sim_p0*2019, 5, 31, *.hdf5'):\n",
+    "sweeps_p0.append(popev.PopulationReader('runs/sweep_sim2datetime.datetime(2019, 4, 13, 10, 46, 22, 798327).hdf5'))\n",
+    "for file in glob.glob('runs/sweep_sim_p0*2019, 5, 31, *.hdf5'):\n",
     "    sweeps_p0.append(popev.PopulationReader(file))\n",
-    "for file in glob.glob('sweep_sim_p1*2019, 5, 31, *.hdf5'):\n",
+    "for file in glob.glob('runs/sweep_sim_p1*2019, 5, 31, *.hdf5'):\n",
     "    sweeps_p1.append(popev.PopulationReader(file))\n",
-    "for file in glob.glob('sweep_sim_p2*2019, 5, 31, *.hdf5'):\n",
+    "for file in glob.glob('runs/sweep_sim_p2*2019, 5, 31, *.hdf5'):\n",
     "    sweeps_p2.append(popev.PopulationReader(file))"
    ]
   },
