--- a/Plots related to the traveling wave regime-Revisions.ipynb
+++ b/Plots related to the traveling wave regime-Revisions.ipynb
@@ -121,28 +121,28 @@
    "outputs": [],
    "source": [
     "fbvary_results = []\n",
-    "for file in glob.glob('evolved_mu_f_b_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
+    "for file in glob.glob('runs/evolved_mu_f_b_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
     "    try:\n",
     "        fbvary_results.append(popev.PopulationReader(file))\n",
     "    except OSError:\n",
     "        pass\n",
     "\n",
     "favary_results = []\n",
-    "for file in glob.glob('evolved_mu_f_a_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
+    "for file in glob.glob('runs/evolved_mu_f_a_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
     "    try:\n",
     "        favary_results.append(popev.PopulationReader(file))\n",
     "    except OSError:\n",
     "        pass\n",
     "\n",
     "delta_f_vary_results = []\n",
-    "for file in glob.glob('evolved_mu_delta_f_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
+    "for file in glob.glob('runs/evolved_mu_delta_f_vary?replicate?datetime.datetime(2019, 5, *).hdf5'):\n",
     "    try:\n",
     "        delta_f_vary_results.append(popev.PopulationReader(file))\n",
     "    except OSError:\n",
     "        pass\n",
     "    \n",
     "K_vary_results = []\n",
-    "for file in glob.glob('evolve_mu_K_vary?replicate?datetime.datetime(2019, 6, *).hdf5'):\n",
+    "for file in glob.glob('runs/evolve_mu_K_vary?replicate?datetime.datetime(2019, 6, *).hdf5'):\n",
     "    try:\n",
     "        K_vary_results.append(popev.PopulationReader(file))\n",
     "    except OSError:\n",
